[package]
name = "auction"
version = "0.0.1"
authors = ["Nurbek Asanbekov <nasanbekov@gmail.com>"]

[dependencies]
exonum = { version = "0.9.0", path = "../exonum/exonum" }
exonum-configuration = { version = "0.9.0", path = "../exonum/services/configuration" }
serde = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.2"
lazy_static = "1.1.0"

#[dev-dependencies]
#exonum-testkit = { version = "0.9.0", path = "../exonum/testkit" }
#serde_json = "1.0.0"
#pretty_assertions = "=0.5.1"
#assert_matches = "1.2.0"
